* Ensure IE Fuse.Dom.Element#getStyle converts negative non-px values to px. [jddalton, jakearchibald, kangax]

* Normalize \t \n \r and multiple spaces to \x20 in element className methods. [jddalton]

* Move method definition of Fuse.Util.$, Fuse.get, and Fuse.getById to dom.js and cleanup element.js. [jddalton]

* Switch from using Array#join for string concatenation to using the plus (+) operator for better minification. [jddalton]

* Support updateGenerics() methods on the DOM wrappers. [jddalton]

* Tweak how String#unescapeHTML tokenizes tags. [jddalton]

* Fix regression bug with Fuse.Dom.Node.getFuseId() getting the proper id. [jddalton]

* Add support for passing a callback to Fuse.query(selector, context, callback). [jddalton]

* Add support for passing an attributes object to Fuse.get(tagName, attributes, context). [jddalton]

* Pass the decorator, instead of the element, to Node.getFuseId() because it is resolved faster. [jddalton]

* Make all DOM methods work with a generic `this`. [jddalton]

* Add Fuse.rawQuery, Fuse.Dom.RawList, Fuse.Dom.Element#rawQuery. [jddalton]

* Add DOM methods to Fuse.Dom.NodeList. [jddalton]

* Remove `this instanceof` usage from FuseJS. [jddalton]

* Rename Fuse.Ajax.getTransport to Fuse.Ajax.create and Fuse.Ajax.Request#transport to Fuse.Ajax.Request#raw. [jddalton]
  Note: Backwards compatibility warning.

* Make all namespaces inheritable. [jddalton]
  Example: Fuse.plugin.addNS = ...; Fuse.Dom.addNS('Data');

* Rename Fuse.Dom.Element#isFragment to Fuse.Dom.Element#isDetached. [jddalton]

* Add nodeType constants DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, and ELEMENT_NODE. [jddalton, kangax]

* Change all `foo.indexOf(blah) === -1` to `foo.indexOf(blah) < 0`. [Andrea Giammarchi, jddalton]

* Rename Fuse.Dom.Element.decorate to Fuse.Dom.Element.fromElement to be consistent with the rest of the API. [jddalton]

* Add Fuse.Dom.Document class and support for Fuse.get(document). [jddalton]
